--- a/package.json
+++ b/package.json
@@ -15,9 +15,14 @@
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^3.4.0",
     "husky": "^7.0.1",
+    "lint-staged": "^11.0.1",
     "onchange": "^7.1.0",
     "prettier": "2.3.2",
     "ts-node": "^10.1.0",
     "typescript": "^4.3.5"
+  },
+  "lint-staged": {
+    "*.{ts,tsx}": "eslint",
+    "**/*": "prettier --write --ignore-unknown"
   }
 }
