--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
+    "commit": "git-cz",
     "lint": "tsc && eslint src/**/*.ts",
     "lint:fix": "eslint src/**/*.ts --fix",
     "dev": "tsc && npm run lint",
@@ -12,6 +13,7 @@
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^4.28.4",
     "@typescript-eslint/parser": "^4.28.4",
+    "commitizen": "^4.2.4",
     "eslint": "^7.31.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^3.4.0",
