--- a/package.json
+++ b/package.json
@@ -22,10 +22,13 @@
     "onchange": "^7.1.0",
     "prettier": "2.3.2",
     "ts-node": "^10.1.0",
-    "typescript": "^4.3.5"
+    "typescript": "^4.3.5",
+    "git-cz": "^4.7.6"
   },
   "lint-staged": {
     "*.{ts,tsx}": "eslint",
     "**/*": "prettier --write --ignore-unknown"
+  },
+  "dependencies": {
   }
 }
