--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "license": "MIT",
   "scripts": {
     "commit": "git-cz",
-    "lint": "tsc && eslint src/**/*.ts",
+    "lint": "tsc && eslint src/**/*.ts && stylelint src/**/*.css",
     "lint:fix": "eslint src/**/*.ts --fix",
     "dev": "tsc && npm run lint",
     "prepare": "husky install"
@@ -17,18 +17,19 @@
     "eslint": "^7.31.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^3.4.0",
+    "git-cz": "^4.7.6",
     "husky": "^7.0.1",
     "lint-staged": "^11.0.1",
     "onchange": "^7.1.0",
     "prettier": "2.3.2",
+    "stylelint": "^13.13.1",
+    "stylelint-config-standard": "^22.0.0",
     "ts-node": "^10.1.0",
-    "typescript": "^4.3.5",
-    "git-cz": "^4.7.6"
+    "typescript": "^4.3.5"
   },
   "lint-staged": {
     "*.{ts,tsx}": "eslint",
+    "*.{css}": "stylelint",
     "**/*": "prettier --write --ignore-unknown"
-  },
-  "dependencies": {
   }
 }
